<resources>
    <string name="app_name">MyInventory</string>
    <string name="name">Name</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="product_price">Product Price</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="measument">Measument</string>
    <string name="overview">Overview</string>
    <string name="weight">Weight</string>
    <string name="kilogram">kg</string>
    <string name="insert_dummy_product">Insert Dummy Product</string>
    <string name="delete_all_product">Delete all Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="product">Product :&#160;</string>
    <string name="price_textview">Price :&#160;$&#160;</string>
    <string name="quantity_textview">Quantity :&#160;</string>
    <string name="weight_textview">Weight :&#160;</string>
    <string name="kg">kg</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_now">Order Now</string>
    <string name="sale">Sale</string>
    <string name="i_m_hungry_add_more_products">I\'m hungry add more products.</string>

    <string name="delete_dialog">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes">Discard your changes and quit editing?</string>

</resources>
