<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.fernandoapeguero.myinventory.AddAProduct">

    <ImageView
        android:id="@+id/add_image"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/plus_icon_black" />

    <TextView
        android:id="@+id/image_String_uri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_product_text_style"
            android:text="@string/overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/product_name_editfield"
                style="@style/add_product_edit_text_style"
                android:hint="@string/name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/product_price_editfield"
                style="@style/add_product_edit_text_style"
                android:hint="@string/price"
                android:inputType="numberDecimal" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_product_text_style"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText

                android:id="@+id/product_quantity_editfield"
                style="@style/add_product_edit_text_style"
                android:hint="@string/quantity"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/add_product_text_style"
            android:text="@string/measument" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

        <EditText
            android:id="@+id/product_weight_editfield"
            style="@style/add_product_edit_text_style"
            android:hint="@string/weight"
            android:inputType="number"/>

            <TextView
                style="@style/measurement_textview_style"
               android:text="@string/kilogram"
                />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>